Change background color.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-https://hacdias.com/writings/feed.xml   <head>
+   <head>
       <title>j4nty</title>
       <link rel="icon" type="image/x-icon" href="./images/icon.png">
       <link rel="stylesheet" href="style.css">
@@ -10,7 +10,7 @@ https://hacdias.com/writings/feed.xml   <head>
          <h1>Salutations!</h1>
          <p>I'm Jonathon (or j4nty), and this is my website!</p>
       </div>
-      <h1>Lorem ipsum</h1>
+      <h1>Lorelm ipsum</h1>
       <p class='placeholder'>
          This is placeholder text. 
       </p>
