--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="style.css">
    </head>  
    <body>
-      <div id='mainPageHeader'>
+      <div>
          <h1>Salutations!</h1>
          <p>I'm Jonathon (or j4nty), and this is my website!</p>
       </div>
@@ -18,5 +18,8 @@
          <h1>Notification!</h1>
          <p>This is in a div with styling to be a notification.</p>
       </div>
+      <footer>
+         <p>Copyright © 2025 j4nty.github.io. All rights reserved.</p> 
+      </footer>
    </body>
 </html>
