--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
       <link rel="stylesheet" href="style.css">
    </head>  
    <body>
-      <div>
+      <div id='main'>
+         <ul class='nav'>
+            <li><a id='active' href="./index.html">Home</a></li>
+            <li><a href="./sandstorm/index.html">Sandstorm</a></li>
+         </ul>
          <h1>Salutations!</h1>
          <p>I'm Jonathon (or j4nty), and this is my website!</p>
+         <footer>
+            <p>Copyright © 2025 j4nty.github.io. All rights reserved.</p> 
+         </footer>
       </div>
-      <footer>
-         <p>Copyright © 2025 j4nty.github.io. All rights reserved.</p> 
-      </footer>
    </body>
 </html>
