--- a/sandstorm/index.html
+++ b/sandstorm/index.html
@@ -1,5 +1,22 @@
-<h1>What is sandstorm?</h1>
-<p>Sandstorm is an episodic story I'm writing about piracy and imperialism and the like on a vast desert with wind-powered sandships.</p>
-<h1>How often do episodes come out?</h1>
-<p>They'll come out when they come out. :)</p>
-<h1>There's an RSS feed!</h1>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Sandstorm</title>
+      <link rel="icon" type="image/x-icon" href="../images/icon.png">
+      <link rel="stylesheet" href="../style.css">
+   </head>
+   <body>
+      <div id=main>
+      <ul class='nav'>
+         <li><a href="../index.html">Home</a></li>
+         <li><a id='active' href="./index.html">Sandstorm</a></li>
+      </ul>
+      <h1>What is Sandstorm?</h1>
+      <p>Sandstorm is an episodic story I'm writing about piracy and imperialism and the like on a vast desert with wind-powered sandships.</p>
+      <h1>How often do episodes come out?</h1>
+      <p>They'll come out when they come out. :)</p>
+      <h1>There's an RSS feed!</h1>
+      <a href='./rss/feed.xml'>Here!</a>
+      </div>
+   </body>
+</html>
