Hopefully fixed mobile for the last time.

--- a/testing.html
+++ b/testing.html
@@ -18,6 +18,9 @@
          <h1>Notification!</h1>
          <p>This is in a div with styling to be a notification.</p>
       </div>
+      <div>
+         p
+      </div>
       <footer>
          <p>Copyright © 2025 j4nty.github.io. All rights reserved.</p> 
       </footer>
