--- a/sandstorm/index.html
+++ b/sandstorm/index.html
@@ -4,6 +4,7 @@
       <title>Sandstorm</title>
       <link rel="icon" type="image/x-icon" href="../images/icon.png">
       <link rel="stylesheet" href="../style.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    </head>
    <body>
       <div id=main>
